fixing social network links on narrow screens

--- a/sites/all/themes/soft/css/soft-alpha-default-narrow.css
+++ b/sites/all/themes/soft/css/soft-alpha-default-narrow.css
@@ -12,6 +12,6 @@ input[type="search"] {
   width: 115px;
 }
 .social-network-links a {
-  width: 2.5em;
-  height: 2.5em;
+  width: 2em;
+  height: 2em;
 }
